@@ -105,7 +105,9 @@ public class SimpleCheckpointVertex extends
     LOG.info("compute: vertex " + getVertexId() +
         " has value " + getVertexValue() +
         " on superstep " + getSuperstep());
-    for (LongWritable targetVertexId : this) {
+    for (Iterator<LongWritable> edges = getOutEdgesIterator();
+         edges.hasNext();) {
+      LongWritable targetVertexId = edges.next();
       FloatWritable edgeValue = getEdgeValue(targetVertexId);
       LOG.info("compute: vertex " + getVertexId() +
           " sending edgeValue " + edgeValue +
