@@ -2,6 +2,8 @@ Giraph Change Log
 
 Release 0.2.0 - unreleased
 
+  GIRAPH-221: Make iteration over edges more explicit (apresta via aching).
+
   GIRAPH-225: Guava version in POM.XML is really old. Updated to version 12.0.
   (Eli Reisman via hyunsik)
 
